--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="style.css" />
+  <!-- Favicon / アイコン -->
+  <link rel="icon" href="./icons/192.png" type="image/png" sizes="192x192">
+  <link rel="icon" href="./icons/512.png" type="image/png" sizes="512x512">
+  <link rel="apple-touch-icon" href="./icons/192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="./icons/512.png" sizes="512x512">
 </head>
 <body>
   <header>
