--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="style.css" />
   <!-- Favicon / Icons (相対参照) -->
-  <link rel="icon" href="./icons/192.png" type="image/png" sizes="192x192">
-  <link rel="icon" href="./icons/512.png" type="image/png" sizes="512x512">
-  <link rel="apple-touch-icon" href="./icons/192.png" sizes="192x192">
-  <link rel="apple-touch-icon" href="./icons/512.png" sizes="512x512">
+  <link rel="icon" href="./icons/192.png" type="image/png">
+  <link rel="icon" href="./icons/512.png" type="image/png">
+  <link rel="apple-touch-icon" href="./icons/192.png">
+  <link rel="apple-touch-icon" href="./icons/512.png">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
